--- a/public/components/markdown-editor/markdown-editor.html
+++ b/public/components/markdown-editor/markdown-editor.html
@@ -145,6 +145,12 @@
             doBulletList: function() {
                 this.commands["wmd-ulist-button"].execute();
             },
+            doHeading: function() {
+                this.commands["wmd-heading-button"].execute();
+            },
+            doHr: function() {
+                this.commands["wmd-hr-button"].execute();
+            },
             doUndo: function() {
                 this.commands["wmd-undo-button"].execute();
             },
@@ -168,28 +174,27 @@
                 resize: {{resize}};
             }
         </style>
-        <core-icon-button id="wmd-bold-button" disabled?={{!commands["wmd-bold-button"].enabled}}  icon="markdown-icons:bold"></core-icon-button>
-        <core-icon-button id="wmd-italic-button" disabled?={{!commands["wmd-italic-button"].enabled}}  icon="markdown-icons:italic"></core-icon-button>
+        <core-icon-button on-click="{{doBold}}" disabled?={{!commands["wmd-bold-button"].enabled}}  icon="markdown-icons:bold"></core-icon-button>
+        <core-icon-button on-click="{{doItalic}}" disabled?={{!commands["wmd-italic-button"].enabled}}  icon="markdown-icons:italic"></core-icon-button>
         <core-icon icon="markdown-icons:spacer"></core-icon>
-        <core-icon-button id="wmd-link-button" disabled?={{!commands["wmd-link-button"].enabled}}  icon="markdown-icons:link"></core-icon-button>
-        <core-icon-button id="wmd-quote-button" disabled?={{!commands["wmd-quote-button"].enabled}}  icon="markdown-icons:quote"></core-icon-button>
-        <core-icon-button id="wmd-code-button" disabled?={{!commands["wmd-code-button"].enabled}}  icon="markdown-icons:code"></core-icon-button>
+        <core-icon-button on-click="{{insertLink}}" disabled?={{!commands["wmd-link-button"].enabled}}  icon="markdown-icons:link"></core-icon-button>
+        <core-icon-button on-click="{{doQuote}}" disabled?={{!commands["wmd-quote-button"].enabled}}  icon="markdown-icons:quote"></core-icon-button>
+        <core-icon-button on-click="{{doCode}}" disabled?={{!commands["wmd-code-button"].enabled}}  icon="markdown-icons:code"></core-icon-button>
         <core-icon icon="markdown-icons:spacer"></core-icon>
         <!--<core-icon-button id="wmd-image-button" disabled?={{!commands["wmd-image-button"].enabled}}  icon="markdown-icons:image"></core-icon-button>-->
         <!--<core-icon icon="markdown-icons:spacer"></core-icon>-->
-        <core-icon-button id="wmd-olist-button" disabled?={{!commands["wmd-olist-button"].enabled}}  icon="markdown-icons:numbered-list"></core-icon-button>
-        <core-icon-button id="wmd-ulist-button" disabled?={{!commands["wmd-ulist-button"].enabled}}  icon="markdown-icons:bullet-list"></core-icon-button>
-        <core-icon-button id="wmd-heading-button" disabled?={{!commands["wmd-heading-button"].enabled}}  icon="markdown-icons:header"></core-icon-button>
-        <core-icon-button id="wmd-hr-button" disabled?={{!commands["wmd-hr-button"].enabled}}  icon="markdown-icons:rule"></core-icon-button>
+        <core-icon-button on-click="{{doNumberedList}}" disabled?={{!commands["wmd-olist-button"].enabled}}  icon="markdown-icons:numbered-list"></core-icon-button>
+        <core-icon-button on-click="{{doBulletList}}" disabled?={{!commands["wmd-ulist-button"].enabled}}  icon="markdown-icons:bullet-list"></core-icon-button>
+        <core-icon-button on-click="{{doHeading}}" disabled?={{!commands["wmd-heading-button"].enabled}}  icon="markdown-icons:header"></core-icon-button>
+        <core-icon-button on-click="{{doHr}}" disabled?={{!commands["wmd-hr-button"].enabled}}  icon="markdown-icons:rule"></core-icon-button>
         <core-icon icon="markdown-icons:spacer"></core-icon>
-        <core-icon-button id="wmd-undo-button" disabled?={{!commands["wmd-undo-button"].enabled}}  icon="markdown-icons:undo"></core-icon-button>
-        <core-icon-button id="wmd-redo-button" disabled?={{!commands["wmd-redo-button"].enabled}}  icon="markdown-icons:redo"></core-icon-button>
+        <core-icon-button on-click="{{doUndo}}" disabled?={{!commands["wmd-undo-button"].enabled}}  icon="markdown-icons:undo"></core-icon-button>
+        <core-icon-button on-click="{{doRedo}}" disabled?={{!commands["wmd-redo-button"].enabled}}  icon="markdown-icons:redo"></core-icon-button>
         <core-icon icon="markdown-icons:spacer"></core-icon>
         <core-icon-button icon="markdown-icons:help"></core-icon-button>
-        <core-icon-button id="wmd-save-button" disabled?={{!commands["wmd-save-button"].enabled}}  src="../../components/save-icon.png"></core-icon-button>
+        <core-icon-button disabled?={{!commands["wmd-save-button"].enabled}}  src="../../components/save-icon.png"></core-icon-button>
         <br/>
-        <textarea rows="{{rows}}" cols="{{cols}}">
-        </textarea>
+        <textarea rows="{{rows}}" cols="{{cols}}"></textarea>
         <div id="preview"></div>
         <core-overlay backdrop="true" layered="true" id="link-insert-dialog"
                       style="background-color: white; padding: 1em" transition="core-transition-center">
