--- a/public/components/child-window/child-window.html
+++ b/public/components/child-window/child-window.html
@@ -1,61 +1,15 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/core-overlay/core-overlay.html">
-<link rel="import" href="../draghandle.html"/>
+<link rel="import" href="../../components/drag-handle/drag-handle.html"/>
 <!--<script type="text/javascript" src="../../javascripts/polyfills.js"></script>-->
-<polymer-element name="child-window" attributes="title okButton cancelButton backdrop movable defaultButtonId"
+<polymer-element name="child-window" attributes="title backdrop movable"
                  extends="core-overlay">
     <script>
         Polymer("child-window", {
             title: "Child window",
-            okButton: true,
-            cancelButton: true,
             backdrop: true,
-            movable: false,
-            defaultButtonId: undefined,
-            defaultButton: undefined,
-            buttonClicked: undefined,
-            autoCloseDisabled: true,
-            callback: function() {},
-            buttonClickHandler: function(evt) {
-                this.buttonClicked = evt.target;
-                if (evt.target.hasAttribute("dialog-close")) {
-                    this.close();
-                }
-            },
-            domReady: function() {
-                this.super();
-                var dialog = this.shadowRoot.host;
-                this.defaultButton = this.defaultButtonId != undefined
-                        ? this.$[this.defaultButtonId] :
-                        this.shadowRoot.querySelector("button");
-                this.cancelButton = this.shadowRoot.querySelector("button[name='cancel']");
-                var _this = this;
-                var dialogCloseListener = function (evt) {
-                    console.log("Dialog state: ", evt.detail);
-                    if (!(evt.detail === true)) {
-                        if (!_this.buttonClicked && _this.cancelButton) {
-                            _this.buttonClicked = _this.cancelButton;
-                        }
-                        dialog.fire("close", {button: _this.buttonClicked.name || _this.buttonClicked.id});
-                    }
-                };
-                dialog.addEventListener("core-overlay-open", dialogCloseListener);
-                Array.prototype.slice.call(this.shadowRoot.querySelectorAll("button")).forEach(function(button) {
-                    button.addEventListener("click", _this.buttonClickHandler.bind(_this));
-                });
-                if (dialog.querySelectorAll("input").length == 1) {
-                    dialog.querySelector("input").onkeypress = function (evt) {
-                        if (evt.keyCode == 13) {
-                            if (_this.defaultButton) {
-                                evt.preventDefault();
-                                _this.defaultButton.click();
-                                return false;
-                            }
-                        }
-                        return true;
-                    };
-                }
-            }
+            movable: false
+
         });
     </script>
     <template>
@@ -68,7 +22,7 @@
             }
         </style>
         <template if="{{movable}}">
-            <mdcms-draghandle draggableId=":host"><h1 id="dragHandle">{{title}}</h1></mdcms-draghandle>
+            <drag-handle draggableId=":host"><h1 id="dragHandle">{{title}}</h1></drag-handle>
         </template>
         <template if="{{!movable}}">
             <h1>{{title}}</h1>
@@ -76,12 +30,6 @@
 
         <shadow>
         </shadow>
-        <template if="{{okButton}}">
-            <button id="okButton" type="button" name="ok" dialog-close>OK</button>
-        </template>
-        <template if="{{cancelButton}}">
-            <button id="cancelButton" type="button" name="cancel" dialog-close>Cancel</button>
-        </template>
     </template>
 
 </polymer-element>
